# whisper

./: .gitignore  README.md  setup.cfg
.github/workflows/: codeql.yml  mypy.yml  pylint.yml  pypi.yml
instance/: config.example.py
whisper/admin/: __init__.py  admin.py  config.py
whisper/admin/auth/: __init__.py  cookie.py  dummy.py  ip.py  password.py  totp.py  webauthn.py
whisper/admin/static/: admin.css  admin.js  auth.css  auth.js  common.css  post.css  post.js
whisper/admin/template/: admin.html  auth.html  base.html  post.html
whisper/core/: __init__.py  __main__.py  config.py  confmgr.py  db.py  dispatcher.py  eventmgr.py  post.py  provider.py  schema.sql
whisper/file/: __init__.py  config.py
whisper/infimum/: __init__.py  config.py
whisper/infimum/static/: common.css  list.css  post.css
whisper/infimum/template/: 404.html  base.html  list.html  post.html
whisper/markdown/: __init__.py  config.py  proxy.py
