[metadata]
name = whisper-blog
version = 0.0.1
description = A lightweight modularized blog engine
long_description = file: README.md
long_description_content_type = text/markdown
author = TechCiel
author_email = whisper@ciel.dev
license = AGPL-3.0
url = https://ciel.dev/whisper/
project_urls =
    Source Code = https://github.com/TechCiel/whisper
    Issue Tracker = https://github.com/TechCiel/whisper/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Typing :: Typed

[options]
install_requires = 
    whisper-blog-core
    whisper-blog-admin
    whisper-blog-infimum
    whisper-blog-file
    whisper-blog-markdown
