[metadata]
name = whisper-blog-infimum
version = 0.0.3
description = A minimalist theme for Whisper, a lightweight modularized blog engine
long_description = file: README.md
long_description_content_type = text/markdown
author = TechCiel
author_email = whisper@ciel.dev
license = AGPL-3.0
url = https://ciel.dev/whisper/
project_urls =
    Source Code = https://github.com/TechCiel/whisper/tree/infimum
    Issue Tracker = https://github.com/TechCiel/whisper/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Typing :: Typed

[options]
packages =
    whisper.infimum
namespace_packages =
    whisper
include_package_data = True
install_requires =
    whisper-blog-core
    whisper-blog-file
    whisper-blog-markdown
python_requires = >= 3.9
zip_safe = False

[options.package_data]
* =
    py.typed
    static/*
    template/*


[mypy]
files = whisper
namespace_packages = True
explicit_package_bases = True
python_version = 3.9
strict = True
implicit_reexport = True

[pylint.MASTER]
py-version = 3.9

[pylint.BASIC]
good-names-rgxs = [a-z]

[pylint.FORMAT]
expected-line-ending-format = LF

[pylint.STRING]
check-quote-consistency = yes

[pylint.LOGGING]
logging-format-style = new
